@@ -310,6 +310,7 @@ $pgv_lang["help_indilist.php"]			= "~INDIVIDUALS LIST PAGE~<br /><br />On this p
 $pgv_lang["alpha_help"]				= "~ALPHABETICAL INDEX~<br /><br />Clicking a letter in the Alphabetical index will display a list of the names that start with the letter you clicked.<br /><br />The second to last item in the Alphabetical index can be <b>#pgv_lang[NN]#</b>.  This entry will be present when there are people in the database whose surname has not been recorded or does not contain any recognizable letters.  Unknown surnames are often recorded as <b>?</b>, and these will be recognized as <b>#pgv_lang[NN]#</b>.  This will also happen if the person is unknown.<br /><br /><b>Note:</b><br />Surnames entered as, for example, <b>Nn</b>, <b>NN</b>, <b>Unknown</b>, or even <b>N.N.</b> will <u>not</u> be found in the <b>#pgv_lang[NN]#</b> list. Instead, you will find these persons by clicking <b>N</b> or <b>U</b> because these are the initial letters of those names.  PhpGedView cannot possibly account for all possible ways of entering unknown surnames;  there is no recognized convention for this.<br /><br />At the end of the Alphabetical index you see <b>ALL</b>. When you click on this item, you will see a list of all surnames in the database.<br /><br /><b>Missing letters?</b><br />If your Alphabetical index appears to be incomplete, with missing letters, your database doesn't contain any surnames that start with that missing letter.<br /><br />";
 $pgv_lang["name_list_help"]			= "~NAME LIST~<br /><br />This box will display either a surname list or a complete name list.  In both cases all surnames will start with the initial letter that you clicked in the Alphabetical index, unless you clicked <b>ALL</b>.<br /><br />Whether you will see a surname list or the complete name list depends on the status of the <b>Skip/Show Surname Lists</b> link.<br /><br />";
 $pgv_lang["skip_sublist_help"]			= "~SKIP SUBLIST~<br /><br />The standard setting is that, after you have clicked a letter of the Alphabetical index, you will get a sub-list with surnames.  If you click this link, all individuals with surnames that have the currently selected initial letter will be displayed immediately. Thereafter, the list of individuals will be displayed directly whenever you click on a new initial letter in the Alphabetical list.<br /><br />To reverse this action, click on the #pgv_lang[show_surnames]# link.<br /><br />";
+$pgv_lang["show_marnms_help"]			= "~INCLUDE/EXCLUDE MARRIED NAMES~<br /><br />The individual and family list pages can either include or exclude married names.  This option can be helpful when searching for individuals or families where you only know the married name.<br /><br />On the family list, this value defaults to exclude.  On the individual list, the default value is set in the gedcom configuration page.<br /><br />When you change this option, your selection will be remembered until you log off or your session ends.<br /><br />";
 
 //-- Families-page
 $pgv_lang["help_famlist.php"]		= "~FAMILY LIST PAGE~<br /><br />On this page you can display a list of families.  The names will be displayed with surnames first and sorted into alphabetical order.<br /><br />The output of the Name list depends on:<ol><li>The letter you clicked in the Alphabetical index.</li><li>Whether you clicked \"Skip\" or \"Show\" Surname List.</li></ol>You can search on the husband's or the wife's surname;  both are included in the list.<br /><br />#pgv_lang[context_help]#<br /><br />";
